<resources>
    <!-- MainActivity -->
    <string name="app_name">LoukIt</string>
    <string name="main_header">LoukIt !</string>
    <string name="main_subheader">Your Daily Task Manager</string>
    <string name="main_activity_button1_label">See your tasks</string>
    <string name="main_activity_button2_label">Config</string>
    <string name="main_activity_button3_label">Test DB Content Provider</string>
    <!-- End of MainActivity -->

    <!-- ConfigActivity -->
    <string name="config_header">App Config</string>
    <string name="config_label1">Duration:</string>
    <string name="config_label2">Difficulty:</string>
    <string name="duration_hint">1,2,3,…</string>
    <string name="difficulty_hint">[0,10] easy to difficult</string>
    <string name="config_button">Save</string>
    <!-- End of ConfigActivity -->

    <!-- ViewTasksActivity -->
    <string name="view_tasks_header">Tasks</string>
    <string name="view_tasks_image_button_label1">Export tasks</string>
    <string name="view_tasks_image_button_label2">Add task</string>
    <!-- End of ViewTasksActivity -->

    <!-- NewTaskActivity -->
    <string name="new_task_header">Task Details</string>
    <string name="short_name_hint">Short Name</string>
    <string name="brief_description_hint">Brief Description</string>
    <string name="start_time_hint">Tap to select start time</string>
    <string name="location_hint">Location</string>
    <string name="duration_hint2">Duration</string>
    <string name="difficulty_hint2">Difficulty</string>
    <string name="duration_helper_text">(hours)</string>
    <string name="location_helper_text">(optional)</string>
    <string name="new_task_activity_button1">Save</string>
    <string name="new_task_activity_button2">Cancel</string>
    <!-- End of NewTaskActivity -->

    <!-- TaskDetailsActivity -->
    <string name="task_details_header">Task Details</string>
    <string name="task_details_id_label">Id</string>
    <string name="task_details_short_name_label">Short Name</string>
    <string name="task_details_description_label">Description</string>
    <string name="task_details_difficulty_label">Difficulty</string>
    <string name="task_details_date_label">Date (timestamp)</string>
    <string name="task_details_start_time_label">Start time</string>
    <string name="task_details_duration_label">Duration</string>
    <string name="task_details_location_label">Location</string>
    <string name="task_details_status_label">Status</string>
    <string name="task_details_navigate_label">Navigate</string>
    <string name="task_details_completed_label">Completed</string>
    <!-- End of TaskDetailsActivity -->

    <!-- Start of the string resources of MarkAsCompletedDialog custom layout -->
    <string name="mark_as_completed_dialog_title">Mark as completed ?</string>
    <string name="mark_as_completed_dialog_message">Are you sure you want to mark this task as completed ?</string>
    <string name="mark_as_completed_dialog_button_yes">YES</string>
    <string name="mark_as_completed_dialog_button_no">NO</string>
    <!-- End of the string resources of MarkAsCompletedDialog custom layout -->

    <!-- Start of the string resources of RationaleDialog custom layout -->
    <string name="rationale_dialog_title">Enable Notifications ?</string>
    <string name="rationale_dialog_message">LookIt needs permission to send you a notification, so you do not miss your daily tasks. If this feature is declined, you will not be able to receive reminders for a task about to begin.</string>
    <string name="rationale_dialog_button_enable">Enable</string>
    <string name="rationale_dialog_button_no_thanks">No thanks</string>
    <string name="rationale_dialog_button_do_not_ask_again">Don`t ask again</string>
    <!-- End of the string resources of RationaleDialog custom layout -->

    <!-- Notifications Channel information -->
    <string name="channel_id">Channel-1</string>
    <string name="channel_name">LoukIt Channel</string>
    <string name="channel_description">This is a notifications channel for my daily tasks app</string>
    <!-- End of the Notifications Channel information -->

</resources>