<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/main_header"
            style="@style/activity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subheader"
            style="@style/activity_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_subheader"
            app:layout_constraintEnd_toEndOf="@+id/main_header"
            app:layout_constraintStart_toStartOf="@+id/main_header"
            app:layout_constraintTop_toBottomOf="@+id/main_header" />

        <Button
            android:id="@+id/main_activity_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/main_activity_button1_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subheader" />

        <ImageButton
            android:id="@+id/main_activity_button2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/main_activity_button2_label"
            android:src="@drawable/ic_accessibility"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>