<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_tasks"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_tasks_activity_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ViewTasksActivity">

        <!-- Main header-->
        <TextView
            android:id="@+id/view_tasks_activity_header"
            style="@style/activity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_tasks_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- RecyclerView -> Displays the list of non-completed tasks retrieved from the Room database -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:nestedScrollingEnabled="true"
            android:clipToPadding="false"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_tasks_activity_header" />

        <!-- Download ImageButton (export tasks in HTML) -->
        <ImageButton
            android:id="@+id/view_tasks_download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/view_tasks_image_button_label1"
            android:src="@drawable/ic_download"
            app:layout_constraintBottom_toTopOf="@+id/view_tasks_add_button"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- New Task ImageButton -->
        <ImageButton
            android:id="@+id/view_tasks_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/view_tasks_image_button_label2"
            android:src="@drawable/ic_add_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
 />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>